@@ -117,7 +117,7 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
                  * if user clicks somewhere keyBinded
                  * backs
                  */
-                DOM.Events.addOneTime('click', function(){
+                Events.addOneTime('click', function(){
                     //lA.contentEditable = false;
                     //KeyBinding && KeyBinding.set();
                 });
@@ -511,18 +511,20 @@ var Util, DOM, CloudFunc, $, KeyBinding, CloudCmd;
             if (lLi.className === 'path')
                 Events.addClick( lLoadDir, ai );
             else {
-                Events.addClick( DOM.preventDefault, lLi);
-                Events.add('mousedown', lSetCurrentFile_f, lLi);
+                Events.add({
+                    'click'         : DOM.preventDefault,
+                    'mousedown'     : lSetCurrentFile_f,
+                    'contextmenu'   : lOnContextMenu_f
+                    }, lLi);
+                
                 Events.add('dragstart', lOnDragStart_f, ai);
-                /* if right button clicked menu will
-                 * loads and shows
-                 */
-                Events.add('contextmenu', lOnContextMenu_f, lLi);
                 
                 /* если ссылка на папку, а не файл */
                 if(ai.target !== '_blank'){
-                    Events.add('dblclick', lLoadDirOnce, lLi);
-                    Events.add('touchend', lLoadDirOnce, lLi);
+                    Events.add({
+                        'dblclick' : lLoadDirOnce,
+                        'touchend' : lLoadDirOnce
+                        }, lLi);
                 }
                 
                 lLi.id = (ai.title ? ai.title : ai.textContent) +
