@@ -265,6 +265,10 @@ var CloudCmd, Util, DOM, CloudFunc;
             };
         },
         EventsProto                 = function(){
+            var Events  = this,
+                ADD     = true,
+                REMOVE  = false;
+                        
             /**
              * safe add event listener
              * 
@@ -274,17 +278,13 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pElement {document by default}
              */
             this.add                        = function(pType, pListener, pElement, pUseCapture){
-                var lRet        = this,
-                    lElement    = (pElement || window);
-                
-                if( lElement.addEventListener)
-                    lElement.addEventListener(
-                        pType,
-                        pListener,
-                        pUseCapture
-                    );
-                
-                return lRet;
+                return process(
+                    ADD,
+                    pType,
+                    pListener,
+                    pElement,
+                    pUseCapture
+                );
             };
             
             /**
@@ -316,15 +316,13 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pElement {document by default}
              */
             this.remove                     = function(pType, pListener, pElement, pUseCapture){
-                var lRet = this;
-                
-                (pElement || window).removeEventListener(
+               return process(
+                    REMOVE,
                     pType,
                     pListener,
+                    pElement,
                     pUseCapture
                 );
-                
-                return lRet;
             };
             
             
@@ -456,6 +454,43 @@ var CloudCmd, Util, DOM, CloudFunc;
                 
                 return lRet;
             };
+            
+               function process(pAdd, pType, pListener, pElement, pUseCapture){
+                var lElement        = (pElement || window),
+                    
+                    lEventProcess   =  pAdd ?
+                        lElement.addEventListener :
+                        lElement.removeEventListener,
+                    
+                    lProcessName    = pAdd ? 'add' : 'remove',
+                    lProcess        = Events[lProcessName],
+                    
+                    lRet            = pType && lEventProcess,
+                    lEvent          = '';
+                
+                lEventProcess       = lEventProcess.bind(lElement);
+                
+                if(lRet){
+                    if(Util.isString(pType) )
+                        lEventProcess(
+                            pType,
+                            pListener,
+                            pUseCapture
+                        );
+                    else if(Util.isObject(pType)){
+                        if(pListener)
+                            pElement = pListener;
+                        
+                        for(lEvent in pType)
+                            lProcess(
+                                lEvent,
+                                pType[lEvent],
+                                pElement,
+                                pUseCapture
+                            );
+                    }
+                }
+            }
         },
         CacheProto                  = function(){
             /* приватный переключатель возможности работы с кэшем */
@@ -1347,7 +1382,7 @@ var CloudCmd, Util, DOM, CloudFunc;
              * @param pKey - 'f1'-'f10'
              */
             this.setButtonKey            = function(pKey, pFunc){
-                Events.addClick(CloudCmd.KeysPanel[pKey], pFunc);
+                Events.addClick(pFunc, CloudCmd.KeysPanel[pKey]);
             };
             
             /**
